--- a/TestPlugIn/AudioUnit_v3/Extension/TestAUv3ExtensionInfo.plist
+++ b/TestPlugIn/AudioUnit_v3/Extension/TestAUv3ExtensionInfo.plist
@@ -38,7 +38,7 @@
 					<key>manufacturer</key>
 					<string>ADeC</string>
 					<key>name</key>
-					<string>ARA Demo Company: ARATestPlugInAUv3</string>
+					<string>ARA SDK Examples: ARATestPlugInAUv3</string>
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
@@ -61,6 +61,6 @@
 		<string>TestAUv3Factory</string>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021-2022 ARA Demo Company. All rights reserved.</string>
+	<string>Copyright © 2021-2022 ARA SDK Examples. All rights reserved.</string>
 </dict>
 </plist>
