Add new (un)archiving test case using ARA2 partial persistency split archives

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1853,6 +1853,7 @@ if(ARA_SETUP_DEBUGGING)
     #string(APPEND ARATestHost_Dbg_Arguments " -test ContentReading")
     #string(APPEND ARATestHost_Dbg_Arguments " -test ModificationCloning")
     #string(APPEND ARATestHost_Dbg_Arguments " -test Archiving")
+    #string(APPEND ARATestHost_Dbg_Arguments " -test SplitArchives")
     #string(APPEND ARATestHost_Dbg_Arguments " -test DragAndDrop")
     #string(APPEND ARATestHost_Dbg_Arguments " -test PlaybackRendering")
     #string(APPEND ARATestHost_Dbg_Arguments " -test EditorView")
